engr441/while-jvm/tests/valid/IntEquals_Valid_1.while
string f(int x, int y) {
    if(x == y) {
        return "EQUAL";
    } else {
        return "NOT EQUAL";
    }
}

void main() {
   assert f(1,4) == "NOT EQUAL";
   assert f(1,4) == "NOT EQUAL";
   assert f(0,0) == "EQUAL";
}
