engr441/while-jvm/tests/invalid-typing/Typing_Invalid_19.while
int f(int x, bool y) {
    return x + y;
}